[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.9.4"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
